Page MenuHome GnuPG

gpg does not ask me again when an incorrect password is provided during `gpg --sign` on Chinese systems
Closed, ResolvedPublic

Description

Steps to reproduce:

  1. Set the system language to Traditional Chinese (zh_TW.UTF-8). This issue does not occur with English (en_US.UTF-8) as the system language. Here are relevant environment variables on my machine:

LANG=zh_TW.UTF-8
LANGUAGE=''
LC_COLLATE=C

  1. Sign something with gpg. For example, echo foo | gpg --sign
  1. Type an incorrect password

The actual result:

gpg: 簽署時失敗: 未知的 IPC 指令
gpg: signing failed: 未知的 IPC 指令

"未知的 IPC 指令" is "Unknown IPC command" in Chinese.

Expected result:

gpg triggers pinentry again to ask me the password.

A possible fix:

I noticed that in po/zh_TW.po of gnupg.git, SETERROR %s (try %d of %d) is translated into 設定錯誤: %s (第 %d 次嘗試, 最多 %d 次). If I change it into SETERROR %s (第 %d 次嘗試, 最多 %d 次) and recompile gnupg, gpg does ask again for an incorrect password.

Environment: Arch Linux x86_64 up-to-date

Details

Version
2.2.17

Event Timeline

chyen renamed this task from gpg does not ask me again when an incorrect password is provided during `gpg --sign` to gpg does not ask me again when an incorrect password is provided during `gpg --sign` on Chinese systems.Nov 1 2019, 9:29 AM
chyen created this task.
werner claimed this task.
werner added a subscriber: werner.

Thanks for the report. I fixed this for the next 2.2 release and put a not in the source file to not translate the keyword.