po: Fix an accidentally translated keyword in zh_TW.

--
GnuPG-bug-id: 4737

Signed-off-by: Werner Koch <wk@gnupg.org>